chore(dev): restructure abundance record; add kmcp k record

--- a/nextflow.config
+++ b/nextflow.config
@@ -109,6 +109,7 @@ params {
       kmcpIndex                       = "$params.databaseDirectory/cipher/kmcp"
       kmcpMode                        = 0
       kmcpLevel                       = "species"
+      kmcpMinQueryCoverage            = 0.4
       sylphIndex                      = "$params.databaseDirectory/cipher/sylph/cipher.syldb"
       sylphMetadata                   = "$params.databaseDirectory/cipher/sylph/metadata.tsv.gz"
       sylphMinNumberKmers             = 20
@@ -340,17 +341,17 @@ profiles {
 
     params.pathogenDetection.taxonomicProfile.classifier                      = true
     params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli"
-    params.pathogenDetection.taxonomicProfile.metabuliIndex         = "$params.databaseDirectory/gtdb/metabuli"
-    params.pathogenDetection.taxonomicProfile.krakenIndex           = "$params.databaseDirectory/refseq/pluspf"
-    params.pathogenDetection.taxonomicProfile.krakenConfidence      = 0.1
+    params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/gtdb/metabuli"
+    params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/refseq/pluspf"
+    params.pathogenDetection.taxonomicProfile.krakenConfidence                = 0.1
 
     params.pathogenDetection.taxonomicProfile.profiler                        = true
     params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken sylph"
-    params.pathogenDetection.taxonomicProfile.brackenReadLength       = 150
-    params.pathogenDetection.taxonomicProfile.brackenRank             = "S"
-    params.pathogenDetection.taxonomicProfile.brackenMinReads         = 3
-    params.pathogenDetection.taxonomicProfile.sylphIndex              = "$params.databaseDirectory/gtdb/sylph.syldb"
-    params.pathogenDetection.taxonomicProfile.sylphMetadata           = "$params.databaseDirectory/gtdb/sylph.metadata.tsv.gz"
+    params.pathogenDetection.taxonomicProfile.brackenReadLength               = 150
+    params.pathogenDetection.taxonomicProfile.brackenRank                     = "S"
+    params.pathogenDetection.taxonomicProfile.brackenMinReads                 = 3
+    params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/gtdb/sylph.syldb"
+    params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/gtdb/sylph.metadata.tsv.gz"
 
   }
 
