chore(dev): add result collector; add pd table; add parsers

--- a/nextflow.config
+++ b/nextflow.config
@@ -92,6 +92,8 @@ params {
       alignmentReference              = "$params.databaseDirectory/cipher/cipher.fasta.gz"
       alignmentSecondary              = false
 
+      taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
+      
       classifier                      = true
       classifierMethod                = "kraken2 metabuli ganon kmcp"
       profiler                        = true
