chore(dev): add result collector; add pd table; add parsers

--- a/nextflow.config
+++ b/nextflow.config
@@ -93,7 +93,7 @@ params {
       alignmentSecondary              = false
 
       taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
-      
+
       classifier                      = true
       classifierMethod                = "kraken2 metabuli ganon kmcp"
       profiler                        = true
@@ -426,7 +426,7 @@ process {
 
     withLabel: cerebro { 
       cpus = params.resources.threads.cerebro 
-      conda = params.resources.conda.cerebro
+      // conda = params.resources.conda.cerebro // dev version
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
