chore(dev): add filters; add pd table; add parsers

--- a/nextflow.config
+++ b/nextflow.config
@@ -424,6 +424,8 @@ profiles {
 
 process {
 
+    errorStrategy = "ignore"
+
     withLabel: cerebro { 
       cpus = params.resources.threads.cerebro 
       // conda = params.resources.conda.cerebro // dev version
