chore(dev): fix app teams routes; add plot options; add fastq output wf-qc

--- a/nextflow.config
+++ b/nextflow.config
@@ -87,9 +87,9 @@ params {
       enabled                         = true
 
       alignment                       = false
-      alignmentMethod                 = "bowtie2"
-      alignmentIndex                  = "$params.databaseDirectory/cipher/cipher"
-      alignmentReference              = "$params.databaseDirectory/cipher/cipher.fasta.gz"
+      alignmentMethod                 = "minimap2"
+      alignmentIndex                  = "$params.databaseDirectory/cipher/ictv.fasta"
+      alignmentReference              = "$params.databaseDirectory/cipher/ictv.fasta"
       alignmentSecondary              = false
 
       taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
