chore(dev): fix panviral enrichment profile arm

--- a/nextflow.config
+++ b/nextflow.config
@@ -183,11 +183,10 @@ params {
   panviralEnrichment {            
 
     virusAligner                      = "minimap2"
-    virusIndex                        = "$params.databaseDirectory/virus.fasta"
-    virusReference                    = "$params.databaseDirectory/virus.fasta"
+    virusIndex                        = "$params.databaseDirectory/ictv.fasta"
+    virusReference                    = "$params.databaseDirectory/ictv.fasta"
 
-    remapThreads                      = 2
-    remapParallel                     = 4
+    vircovArgs                        = "--min-consensus-depth 3 --min-depth-coverage 1"
 
   }
 
@@ -432,6 +431,10 @@ process {
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
+      conda = params.resources.conda.vircov
+    }
+    withLabel: panviralVirusTools { 
+      cpus = 1
       conda = params.resources.conda.vircov
     }
     withLabel: qualityReadScan { 
