chore(dev): add panviral config

--- a/nextflow.config
+++ b/nextflow.config
@@ -186,7 +186,7 @@ params {
     virusIndex                        = "$params.databaseDirectory/ictv.fasta"
     virusReference                    = "$params.databaseDirectory/ictv.fasta"
 
-    vircovArgs                        = "--min-consensus-depth 3 --min-depth-coverage 1"
+    vircovArgs                        = "--min-consensus-depth 3 --min-depth-coverage 1 --annotation-preset ictv"
 
   }
 
@@ -339,20 +339,6 @@ profiles {
     params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/gtdb/gtdb.fasta"
     params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/gtdb/gtdb.fasta"
     params.pathogenDetection.taxonomicProfile.alignmentSecondary              = false
-
-    params.pathogenDetection.taxonomicProfile.classifier                      = true
-    params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli"
-    params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/gtdb/metabuli"
-    params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/refseq/pluspf"
-    params.pathogenDetection.taxonomicProfile.krakenConfidence                = 0.1
-
-    params.pathogenDetection.taxonomicProfile.profiler                        = true
-    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken sylph"
-    params.pathogenDetection.taxonomicProfile.brackenReadLength               = 150
-    params.pathogenDetection.taxonomicProfile.brackenRank                     = "S"
-    params.pathogenDetection.taxonomicProfile.brackenMinReads                 = 3
-    params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/gtdb/sylph.syldb"
-    params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/gtdb/sylph.metadata.tsv.gz"
 
   }
 
