--- a/nextflow.config
+++ b/nextflow.config
@@ -322,7 +322,7 @@ profiles {
                     
     params.qualityControl.hostDepletion                                       = true
     params.qualityControl.hostDepletionAligner                                = "minimap2"
-    params.qualityControl.hostDepletionIndex                                  = "$params.databaseDirectory/chm13v2.fasta"
+    params.qualityControl.hostDepletionIndex                                  = "$params.databaseDirectory/chm13v2.fa"
                     
     params.qualityControl.internalControls                                    = false
     params.qualityControl.internalControlsAligner                             = "minimap2"
