chore(dev): fix ganon; add ont params

--- a/nextflow.config
+++ b/nextflow.config
@@ -340,6 +340,12 @@ profiles {
     params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/gtdb/gtdb.fasta"
     params.pathogenDetection.taxonomicProfile.alignmentSecondary              = false
 
+    
+    params.pathogenDetection.taxonomicProfile.classifier                      = true
+    params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli ganon"
+    params.pathogenDetection.taxonomicProfile.profiler                        = true
+    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken ganon sylph"
+
   }
 
   bg {
