--- a/lib/standalone/aneuploidy/nextflow.config
+++ b/lib/standalone/aneuploidy/nextflow.config
@@ -17,14 +17,14 @@ params {
   deduplicate                          = true                           // samtools markdup removal on host alignment bam
   markdupDistance                      = 100                            // http://www.htslib.org/algorithms/duplicate.html
   referenceFasta                       = "db/CHM13v2.fasta"             // human reference complete
-  normalControlBam                     = "db/HG007.CHM13v2.5x.bam"      // control alignment reference must be same as referenceFasta
+  normalControlBam                     = "db/HG007.CHM13v2.QC.bam"      // control alignment reference must be same as referenceFasta
   dropLowCoverage                      = false                          // cnvkit
   targetAverageBinSize                 = 100000                         // cnvkit
 
   resources {
     threads {
-      minimap2              = 4
-      cnvkit                = 4
+      minimap2              = 16
+      cnvkit                = 8
     }
     memory {
       minimap2              = "32 GB"
