chore(dev): move aneuploidy to standalone

--- a/lib/standalone/aneuploidy/nextflow.config
+++ b/lib/standalone/aneuploidy/nextflow.config
@@ -17,7 +17,7 @@ params {
   deduplicate                          = true                           // samtools markdup removal on host alignment bam
   markdupDistance                      = 100                            // http://www.htslib.org/algorithms/duplicate.html
   referenceFasta                       = "db/CHM13v2.fasta"             // human reference complete
-  normalControlBam                     = "db/HG007.CHM13v2.QC.bam"      // control alignment reference must be same as referenceFasta
+  normalControlBam                     = "db/HG007.5x.QC.bam"           // control alignment reference must be same as referenceFasta
   dropLowCoverage                      = false                          // cnvkit
   targetAverageBinSize                 = 100000                         // cnvkit
 
