chore(dev): move aneuploidy to standalone

--- a/lib/standalone/aneuploidy/nextflow.config
+++ b/lib/standalone/aneuploidy/nextflow.config
@@ -31,8 +31,8 @@ params {
       cnvkit                = "16 GB"
     }
     conda {
-      minimap2              = "$baseDir/minimap2.yml"
-      cnvkit                = "$baseDir/cnvkit.yml"
+      minimap2              = "$baseDir/resources/minimap2.yml"
+      cnvkit                = "$baseDir/resources/cnvkit.yml"
     }
   }
 }
