chore(dev): workflow

--- a/lib/standalone/aneuploidy/nextflow.config
+++ b/lib/standalone/aneuploidy/nextflow.config
@@ -16,10 +16,10 @@ params {
   pairedReads                          = "*_{R1,R2}.fastq.gz"           // input glob string
   deduplicate                          = true                           // samtools markdup removal on host alignment bam
   markdupDistance                      = 100                            // http://www.htslib.org/algorithms/duplicate.html
-  referenceFasta                       = "db/CHM13v2.fasta"             // human reference complete
-  normalControlBam                     = "db/HG007.5x.QC.bam"           // control alignment reference must be same as referenceFasta
-  dropLowCoverage                      = false                          // cnvkit
-  targetAverageBinSize                 = 100000                         // cnvkit
+  referenceFasta                       = "resources/CHM13v2.fasta"      // human reference complete, uncompressed
+  normalControlBam                     = "resources/HG007.5x.QC.bam"    // normal control bam reference must be same as referenceFasta
+  dropLowCoverage                      = false                          // cnvkit parameter
+  targetAverageBinSize                 = 100000                         // cnvkit parameter
 
   resources {
     threads {
@@ -49,28 +49,34 @@ profiles {
   }
 
   micro {
-      executor.$local.cpus = 8
-      executor.$local.memory = '32 GB'
+    executor.$local.cpus = 8
+    executor.$local.memory = '32 GB'
   }
   tiny {
-      executor.$local.cpus = 16
-      executor.$local.memory = '64 GB'
+    executor.$local.cpus = 16
+      xecutor.$local.memory = '64 GB'
   }
   mini {
-      executor.$local.cpus = 32
-      executor.$local.memory = '128 GB'
+    executor.$local.cpus = 32
+    executor.$local.memory = '128 GB'
   }
   small {
-      executor.$local.cpus = 64
-      executor.$local.memory = '512 GB'
+    executor.$local.cpus = 64
+    executor.$local.memory = '512 GB'
   }
   medium {
-      executor.$local.cpus = 128
-      executor.$local.memory = '512 GB'
+    executor.$local.cpus = 128
+    executor.$local.memory = '512 GB'
   }
   large {
-      executor.$local.cpus = 256
-      executor.$local.memory = '1960 GB'
+    executor.$local.cpus = 256
+    executor.$local.memory = '1960 GB'
+  }
+
+  test {
+    outdir      = "test_aneuploidy"
+    pairedReads = "test/*_{R1,R2}.fastq.gz"
+    
   }
 }
 
