--- a/nextflow.config
+++ b/nextflow.config
@@ -186,7 +186,7 @@ params {
     virusIndex                        = "$params.databaseDirectory/ictv.fasta"
     virusReference                    = "$params.databaseDirectory/ictv.fasta"
 
-    vircovArgs                        = "--min-consensus-depth 3 --min-depth-coverage 1 --annotation-preset ictv"
+    vircovArgs                        = "--consensus-min-depth 3 --min-depth-coverage 1 --annotation-preset ictv"
 
   }
 
