chore(dev): add empty parse guard; add ictv profile

--- a/lib/standalone/aneuploidy/nextflow.config
+++ b/lib/standalone/aneuploidy/nextflow.config
@@ -74,10 +74,10 @@ profiles {
   }
 
   test {
-    outdir      = "test_aneuploidy"
-    pairedReads = "test/*_{R1,R2}.fastq.gz"
-    
+    params.outdir      = "test_aneuploidy"
+    params.pairedReads = "test/*_{R1,R2}.fastq.gz"
   }
+
 }
 
 process {
