--- a/nextflow.config
+++ b/nextflow.config
@@ -349,15 +349,29 @@ profiles {
   }
 
   bg {
-      params.cerebroConfig.processQcBackgroundOnly         = true
-      params.qualityControl.syntheticControls              = false
-      params.qualityControl.internalControls               = false
-      params.qualityControl.hostDepletion                  = false
-      params.qualityControl.backgroundDepletion            = true
-      params.qualityControl.backgroundDepletionAligner     = "bowtie2"
-      params.qualityControl.backgroundDepletionIndex       = "$params.databaseDirectory/qc"
-      params.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
+    params.cerebroConfig.processQcBackgroundOnly         = true
+    params.qualityControl.syntheticControls              = false
+    params.qualityControl.internalControls               = false
+    params.qualityControl.hostDepletion                  = false
+    params.qualityControl.backgroundDepletion            = true
+    params.qualityControl.backgroundDepletionAligner     = "bowtie2"
+    params.qualityControl.backgroundDepletionIndex       = "$params.databaseDirectory/qc"
+    params.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
   }
+  
+  ictv {
+    params.pathogenDetection.taxonomicProfiletaxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
+    params.pathogenDetection.taxonomicProfilealignmentIndex                  = "$params.databaseDirectory/ictv/ictv.fasta"
+    params.pathogenDetection.taxonomicProfilealignmentReference              = "$params.databaseDirectory/ictv/ictv.fasta"
+    params.pathogenDetection.taxonomicProfilemetabuliIndex                   = "$params.databaseDirectory/ictv/metabuli"
+    params.pathogenDetection.taxonomicProfilekrakenIndex                     = "$params.databaseDirectory/ictv/kraken2"
+    params.pathogenDetection.taxonomicProfileganonIndex                      = "$params.databaseDirectory/ictv/ganon"
+    params.pathogenDetection.taxonomicProfileganonDatabasePrefix             = "ictv"
+    params.pathogenDetection.taxonomicProfilekmcpIndex                       = "$params.databaseDirectory/ictv/kmcp"
+    params.pathogenDetection.taxonomicProfilesylphIndex                      = "$params.databaseDirectory/ictv/sylph/ictv.syldb"
+    params.pathogenDetection.taxonomicProfilesylphMetadata                   = "$params.databaseDirectory/ictv/sylph/metadata.tsv.gz"
+  }
+
 
   micro {
       executor.$local.cpus = 8
