chore(dev): add ram limits to db profile; add ictv profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -358,18 +358,50 @@ profiles {
     params.qualityControl.backgroundDepletionIndex       = "$params.databaseDirectory/qc"
     params.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
   }
-  
+
+  cipher {
+    params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
+    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/cipher/ictv.fasta"
+    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/cipher/ictv.fasta"
+    params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/cipher/metabuli"
+    params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/cipher/kraken2"
+    params.pathogenDetection.taxonomicProfile.ganonIndex                      = "$params.databaseDirectory/cipher/ganon"
+    params.pathogenDetection.taxonomicProfile.ganonDatabasePrefix             = "cipher"
+    params.pathogenDetection.taxonomicProfile.kmcpIndex                       = "$params.databaseDirectory/cipher/kmcp"
+    params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/cipher/sylph/ictv.syldb"
+    params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/cipher/sylph/metadata.tsv.gz"
+
+    params.resources.memory.metaspades             = "256 GB"
+    params.resources.memory.megahit                = "256 GB"
+    params.resources.memory.metabuli               = "64 GB"
+    params.resources.memory.kraken2                = "768 GB"
+    params.resources.memory.kmcp                   = "256 GB"
+    params.resources.memory.ganon                  = "384 GB"
+    params.resources.memory.sylph                  = "64 GB"
+    params.resources.memory.bracken                = "32 GB"
+
+  }
+
   ictv {
-    params.pathogenDetection.taxonomicProfiletaxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
-    params.pathogenDetection.taxonomicProfilealignmentIndex                  = "$params.databaseDirectory/ictv/ictv.fasta"
-    params.pathogenDetection.taxonomicProfilealignmentReference              = "$params.databaseDirectory/ictv/ictv.fasta"
-    params.pathogenDetection.taxonomicProfilemetabuliIndex                   = "$params.databaseDirectory/ictv/metabuli"
-    params.pathogenDetection.taxonomicProfilekrakenIndex                     = "$params.databaseDirectory/ictv/kraken2"
-    params.pathogenDetection.taxonomicProfileganonIndex                      = "$params.databaseDirectory/ictv/ganon"
-    params.pathogenDetection.taxonomicProfileganonDatabasePrefix             = "ictv"
-    params.pathogenDetection.taxonomicProfilekmcpIndex                       = "$params.databaseDirectory/ictv/kmcp"
-    params.pathogenDetection.taxonomicProfilesylphIndex                      = "$params.databaseDirectory/ictv/sylph/ictv.syldb"
-    params.pathogenDetection.taxonomicProfilesylphMetadata                   = "$params.databaseDirectory/ictv/sylph/metadata.tsv.gz"
+    params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
+    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/ictv/ictv.fasta"
+    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/ictv/ictv.fasta"
+    params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/ictv/metabuli"
+    params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/ictv/kraken2"
+    params.pathogenDetection.taxonomicProfile.ganonIndex                      = "$params.databaseDirectory/ictv/ganon"
+    params.pathogenDetection.taxonomicProfile.ganonDatabasePrefix             = "ictv"
+    params.pathogenDetection.taxonomicProfile.kmcpIndex                       = "$params.databaseDirectory/ictv/kmcp"
+    params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/ictv/sylph/ictv.syldb"
+    params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/ictv/sylph/metadata.tsv.gz"
+
+    params.resources.memory.metaspades             = "128 GB"
+    params.resources.memory.megahit                = "32 GB"
+    params.resources.memory.metabuli               = "32 GB"
+    params.resources.memory.kraken2                = "32 GB"
+    params.resources.memory.kmcp                   = "32 GB"
+    params.resources.memory.ganon                  = "32 GB"
+    params.resources.memory.sylph                  = "32 GB"
+    params.resources.memory.bracken                = "32 GB"
   }
 
 
@@ -415,14 +447,6 @@ profiles {
     params.resources.threads.metaspades            = 32
     params.resources.threads.megahit               = 32
     params.resources.threads.concoct               = 8
-    params.resources.memory.metaspades             = "256 GB"
-    params.resources.memory.megahit                = "256 GB"
-    params.resources.memory.metabuli               = "64 GB"
-    params.resources.memory.kraken2                = "768 GB"
-    params.resources.memory.kmcp                   = "256 GB"
-    params.resources.memory.ganon                  = "384 GB"
-    params.resources.memory.sylph                  = "64 GB"
-    params.resources.memory.bracken                = "32 GB"
   }
 
 }
