chore(dev): add kmcp empty classification guards

--- a/nextflow.config
+++ b/nextflow.config
@@ -250,6 +250,7 @@ params {
       metabat2              = 4
       metabuli              = 8
       sylph                 = 8
+      semibin2              = 2
       kmcp                  = 8
       ganon                 = 8
       metaspades            = 8
@@ -283,6 +284,7 @@ params {
       metabat2              = "$baseDir/lib/resources/conda/metabat2.yml"
       scrubby               = "$baseDir/lib/resources/conda/scrubby.yml"
       sylph                 = "$baseDir/lib/resources/conda/sylph.yml"
+      semibin2              = "$baseDir/lib/resources/conda/semibin2.yml"
       vircov                = "$baseDir/lib/resources/conda/vircov.yml"
       virscrub              = "$baseDir/lib/resources/conda/virscrub.yml"
     }
@@ -554,5 +556,9 @@ process {
     withLabel: pathogenAssemblyMetabat2 {  
       cpus = params.resources.threads.metabat2
       conda = params.resources.conda.metabat2
+    }
+    withLabel: pathogenAssemblySemiBin2 {  
+      cpus = params.resources.threads.semibin2
+      conda = params.resources.conda.semibin2
     }
 }
