chore(dev): cerebro dev version

--- a/nextflow.config
+++ b/nextflow.config
@@ -472,11 +472,11 @@ process {
     }
     withLabel: qualityReadScan { 
       cpus = params.resources.threads.cerebro 
-      conda = params.resources.conda.cerebro
+      // conda = params.resources.conda.cerebro // dev version
     }
     withLabel: qualityDeduplication { 
       cpus = params.resources.threads.cerebro 
-      conda = params.resources.conda.cerebro
+      // conda = params.resources.conda.cerebro // dev version
     }
     withLabel: qualityReadQualityFastp { 
       cpus = params.resources.threads.fastp 
