chore(dev): add vircov alignment to pathogen wf

--- a/nextflow.config
+++ b/nextflow.config
@@ -87,10 +87,11 @@ params {
       enabled                         = true
 
       alignment                       = false
-      alignmentMethod                 = "minimap2"
-      alignmentIndex                  = "$params.databaseDirectory/cipher/ictv.fasta"
+      alignmentMethod                 = "bowtie2"
+      alignmentIndex                  = "$params.databaseDirectory/cipher/ictv"
       alignmentReference              = "$params.databaseDirectory/cipher/ictv.fasta"
       alignmentSecondary              = false
+      vircovArgs                        = "--consensus-min-depth 3 --min-depth-coverage 1 --annotation-preset default"
 
       taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
 
@@ -128,11 +129,11 @@ params {
       assemblyKmerList                = "21,29,39,59,79,99,119,127"
       assemblyMinContigLength         = 200  
 
-      binningMethod                   = "concoct"     
+      binningMethod                   = "concoct"  // concoct, metabat2, semibin2  
 
       binningChunkSize                = 10000   // concoct
       binningReadLength               = 150     // concoct
-      binningMinContigLength          = 1500    // concoct / metabat2 >= 1500
+      binningMinContigLength          = 1500    // concoct / semibin2 / metabat2 >= 1500
       binningMinBinSize               = 5000    // concoct / metabat2
 
       ncbiDatabase                    = false
@@ -386,9 +387,12 @@ profiles {
   }
 
   ictv {
+    
+    params.pathogenDetection.taxonomicProfile.alignment                       = true
+
     params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
-    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/ictv/ictv.fasta"
-    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/ictv/ictv.fasta"
+    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/ictv/vircov/ictv"
+    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/ictv/vircov/ictv.fasta"
     params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/ictv/metabuli"
     params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/ictv/kraken2"
     params.pathogenDetection.taxonomicProfile.ganonIndex                      = "$params.databaseDirectory/ictv/ganon"
