chore(dev): add vircov resource params

--- a/nextflow.config
+++ b/nextflow.config
@@ -268,6 +268,7 @@ params {
       ganon                 = "16 GB"
       sylph                 = "16 GB"
       bracken               = "16 GB"
+      vircov                = "16 GB"
     }
 
     conda {
@@ -383,6 +384,7 @@ profiles {
     params.resources.memory.ganon                  = "384 GB"
     params.resources.memory.sylph                  = "64 GB"
     params.resources.memory.bracken                = "32 GB"
+    params.resources.memory.vircov                 = "32 GB"
 
   }
 
@@ -409,6 +411,8 @@ profiles {
     params.resources.memory.ganon                  = "32 GB"
     params.resources.memory.sylph                  = "32 GB"
     params.resources.memory.bracken                = "32 GB"
+    params.resources.memory.vircov                 = "32 GB"
+
   }
 
 
@@ -440,8 +444,8 @@ profiles {
     params.resources.threads.fastp                 = 16
     params.resources.threads.scrubby               = 16
     params.resources.threads.vircov                = 32
-    params.resources.threads.vircovRemap           = 16
-    params.resources.threads.vircovParallel        = 4
+    params.resources.threads.vircovRemap           = 4
+    params.resources.threads.vircovParallel        = 8
     params.resources.threads.cerebro               = 2
     params.resources.threads.kraken2               = 32
     params.resources.threads.bracken               = 1
@@ -468,6 +472,7 @@ process {
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
+      memory = params.resources.memory.vircov
       conda = params.resources.conda.vircov
     }
     withLabel: panviralVirusTools { 
@@ -508,6 +513,7 @@ process {
     }
     withLabel: pathogenProfileVircov {
       cpus = params.resources.threads.vircov 
+      memory = params.resources.memory.vircov
       conda = params.resources.conda.vircov
     }
     withLabel: pathogenProfileKraken2 { 
