chore(dev): add vircov exclude bins

--- a/nextflow.config
+++ b/nextflow.config
@@ -91,7 +91,7 @@ params {
       alignmentIndex                  = "$params.databaseDirectory/cipher/ictv"
       alignmentReference              = "$params.databaseDirectory/cipher/ictv.fasta"
       alignmentSecondary              = false
-      vircovArgs                        = "--consensus-min-depth 3 --min-depth-coverage 1 --annotation-preset default"
+      vircovArgs                      = "--consensus-min-depth 3 --min-depth-coverage 1 --annotation-preset default"
 
       taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
 
@@ -391,6 +391,7 @@ profiles {
   ictv {
     
     params.pathogenDetection.taxonomicProfile.alignment                       = true
+    params.pathogenDetection.taxonomicProfile.vircovArgs                      = "--remap-exclude-bins 'Homo sapiens'"
 
     params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
     params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/ictv/vircov/ictv"
