--- a/nextflow.config
+++ b/nextflow.config
@@ -391,6 +391,7 @@ profiles {
   ictv {
     
     params.pathogenDetection.taxonomicProfile.alignment                       = true
+    params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
     params.pathogenDetection.taxonomicProfile.vircovArgs                      = "--remap-exclude-bins 'Homo sapiens'"
 
     params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
