chore(dev): refactor pipeline integration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [
     "cerebro/cerebro",
     "cerebro/lib/model",
     "cerebro/stack/report",
-    "cerebro/stack/pipeline",
+    # "cerebro/stack/pipeline",
     "cerebro/stack/server",
     "cerebro/stack/client",
     "cerebro/stack/watcher",
