chore(dev): refactor pipeline integration

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ manifest {
     homePage = 'https://github.com/esteinig/cerebro'
     description = 'Clinical metagenomic diagnostics pipeline'
     mainScript = 'main.nf'
-    version = '0.8.0'
+    version = '0.10.0'
     nextflowVersion = '>=24.04'
 }
 
@@ -365,15 +365,21 @@ profiles {
   }
 
   cipher {
+
     params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
-    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/cipher/ictv.fasta"
+
+    params.pathogenDetection.taxonomicProfile.alignment                       = false
+    params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
+    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/cipher/ictv"
     params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/cipher/ictv.fasta"
+    params.pathogenDetection.taxonomicProfile.vircovArgs                      = "--remap-exclude-bins 'Homo sapiens'"
+
     params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/cipher/metabuli"
     params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/cipher/kraken2"
     params.pathogenDetection.taxonomicProfile.ganonIndex                      = "$params.databaseDirectory/cipher/ganon"
     params.pathogenDetection.taxonomicProfile.ganonDatabasePrefix             = "cipher"
     params.pathogenDetection.taxonomicProfile.kmcpIndex                       = "$params.databaseDirectory/cipher/kmcp"
-    params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/cipher/sylph/ictv.syldb"
+    params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/cipher/sylph/cipher.syldb"
     params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/cipher/sylph/metadata.tsv.gz"
 
     params.resources.memory.metaspades             = "256 GB"
@@ -390,13 +396,14 @@ profiles {
 
   ictv {
     
+    params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
+
     params.pathogenDetection.taxonomicProfile.alignment                       = true
     params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
-    params.pathogenDetection.taxonomicProfile.vircovArgs                      = "--remap-exclude-bins 'Homo sapiens'"
-
-    params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
     params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/ictv/vircov/ictv"
     params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/ictv/vircov/ictv.fasta"
+    params.pathogenDetection.taxonomicProfile.vircovArgs                      = "--remap-exclude-bins 'Homo sapiens'"
+
     params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/ictv/metabuli"
     params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/ictv/kraken2"
     params.pathogenDetection.taxonomicProfile.ganonIndex                      = "$params.databaseDirectory/ictv/ganon"
@@ -436,11 +443,11 @@ profiles {
   }
   medium {
       executor.$local.cpus = 128
-      executor.$local.memory = '512 GB'
+      executor.$local.memory = '1024 GB'
   }
   large {
       executor.$local.cpus = 256
-      executor.$local.memory = '1960 GB'
+      executor.$local.memory = '2048 GB'
   }
   dgx {
     params.resources.threads.fastp                 = 16
