chore(dev): add memory mapping

--- a/nextflow.config
+++ b/nextflow.config
@@ -101,8 +101,10 @@ params {
       profilerMethod                  = "bracken ganon kmcp sylph"
 
       metabuliIndex                   = "$params.databaseDirectory/cipher/metabuli"
+      metabuliMemoryMapping           = true
       krakenIndex                     = "$params.databaseDirectory/cipher/kraken2"
       krakenConfidence                = 0.0
+      krakenMemoryMapping             = true
       brackenReadLength               = 150
       brackenRank                     = "S"
       brackenMinReads                 = 3
