chore(dev): refactor taxonomic profiles

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cerebro",
-  "version": "0.8.0",
+  "version": "0.10.0",
   "private": true,
   "scripts": {
     "dev": "vite dev --host --port 8000",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@carbon/charts-svelte": "^1.12.0",
     "@floating-ui/dom": "1.5.1",
+    "@vincjo/datatables": "1.14.10",
     "@skeletonlabs/skeleton": "2.10",
     "@skeletonlabs/tw-plugin": "^0.2.1",
     "@sveltejs/adapter-auto": "^2.0.0",
