--- a/nextflow.config
+++ b/nextflow.config
@@ -425,6 +425,36 @@ profiles {
 
   }
 
+  ictv_nohost {
+    
+    params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
+
+    params.pathogenDetection.taxonomicProfile.alignment                       = true
+    params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
+    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/ictv/vircov/ictv"
+    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/ictv/vircov/ictv.fasta"
+    params.pathogenDetection.taxonomicProfile.vircovArgs                      = ""
+
+    params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/ictv/metabuli"
+    params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/ictv/kraken2"
+    params.pathogenDetection.taxonomicProfile.ganonIndex                      = "$params.databaseDirectory/ictv/ganon"
+    params.pathogenDetection.taxonomicProfile.ganonDatabasePrefix             = "ictv"
+    params.pathogenDetection.taxonomicProfile.kmcpIndex                       = "$params.databaseDirectory/ictv/kmcp"
+    params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/ictv/sylph/ictv.syldb"
+    params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/ictv/sylph/metadata.tsv.gz"
+
+    params.resources.memory.metaspades             = "128 GB"
+    params.resources.memory.megahit                = "32 GB"
+    params.resources.memory.metabuli               = "32 GB"
+    params.resources.memory.kraken2                = "32 GB"
+    params.resources.memory.kmcp                   = "32 GB"
+    params.resources.memory.ganon                  = "32 GB"
+    params.resources.memory.sylph                  = "32 GB"
+    params.resources.memory.bracken                = "32 GB"
+    params.resources.memory.vircov                 = "32 GB"
+
+  }
+
 
   micro {
       executor.$local.cpus = 8
